--- a/styles.css
+++ b/styles.css
@@ -444,10 +444,7 @@ body {
 }
 
 
-<<<<<<< Updated upstream
 
-=======
->>>>>>> Stashed changes
 /* Gotas de sangue escorrendo */
 /*.characters-section::after {
     content: '';
@@ -588,6 +585,10 @@ body {
     object-fit: contain;
     filter: brightness(0.8);
     transition: filter 0.3s ease;
+}
+.class-btn[data-class="bs"] img,
+.class-btn[data-class="wl"] img {
+    transform: translateX(-2px) scale(1); /* Move e redimensiona */
 }
 
 .class-btn:hover img,
@@ -817,12 +818,23 @@ body {
     
 }
 
-.character-animation img {
+#bs .character-animation img {
+    width: 150%;
+    height: 150%;
+    object-fit: contain;
+    position: relative;
+    transform: scaleX(-1) translate(20px, -15px);
+    z-index: 1;
+    filter: brightness(0%); 
+    
+}
+
+#wl .character-animation img {
     width: 90%;
     height: 90%;
     object-fit: contain;
     position: relative;
-    transform: scaleX(-1);
+    transform: scaleX(-1) translate(20px, 10px);
     z-index: 1;
     filter: brightness(0%); 
     
@@ -1078,11 +1090,11 @@ body {
 }
 
 .inhabitant-card:nth-child(3) .inhabitant-image img {
-    transform: scale(2.5) translate(30px, 25px); /* Move 5px esquerda, 10px baixo */
+    transform: scale(2.5) translate(15px, 75px); /* Move 5px esquerda, 10px baixo */
 }
 
 .inhabitant-card:nth-child(4) .inhabitant-image img {
-    transform: scale(2.5) translate(30px, 25px); /* Move 5px esquerda, 10px baixo */
+    transform: scale(2.5) translate(0px, 75px); /* Move 5px esquerda, 10px baixo */
 }
 
 
